syntax = "proto3";

package com.codebridge.aidbagent.grpc;

option java_multiple_files = true;
option java_package = "com.codebridge.aidbagent.grpc";
option java_outer_classname = "AiDbAgentProto";
option go_package = "github.com/codebridge/aidbagent/grpc";

// AI-DB-Agent Service API
service AiDbAgentService {
  // Convert natural language to SQL
  rpc NaturalLanguageToSql(NlToSqlRequest) returns (NlToSqlResponse) {}
  
  // Explain SQL query
  rpc ExplainSqlQuery(ExplainSqlRequest) returns (ExplainSqlResponse) {}
  
  // Validate SQL query against schema
  rpc ValidateSqlQuery(ValidateSqlRequest) returns (ValidateSqlResponse) {}
  
  // Get query suggestions
  rpc GetQuerySuggestions(QuerySuggestionsRequest) returns (QuerySuggestionsResponse) {}
  
  // Stream query execution
  rpc StreamQueryExecution(StreamQueryRequest) returns (stream QueryResultEvent) {}
  
  // Get schema information
  rpc GetSchemaInfo(SchemaInfoRequest) returns (SchemaInfoResponse) {}
  
  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {}
}

// Request to convert natural language to SQL
message NlToSqlRequest {
  string natural_language_query = 1;
  string database_id = 2;
  string schema_context = 3;
  string user_id = 4;
  map<string, string> metadata = 5;
  QueryOptions options = 6;
}

// Query options
message QueryOptions {
  string dialect = 1;
  bool include_comments = 2;
  bool optimize_query = 3;
  int32 max_results = 4;
  bool safe_mode = 5;
}

// Response with SQL query
message NlToSqlResponse {
  string sql_query = 1;
  float confidence_score = 2;
  repeated string tables_referenced = 3;
  repeated string columns_referenced = 4;
  repeated string warnings = 5;
  repeated SqlAlternative alternatives = 6;
}

// SQL alternative
message SqlAlternative {
  string sql_query = 1;
  float confidence_score = 2;
  string description = 3;
}

// Request to explain SQL query
message ExplainSqlRequest {
  string sql_query = 1;
  string database_id = 2;
  string user_id = 3;
  ExplainOptions options = 4;
}

// Explain options
message ExplainOptions {
  bool include_execution_plan = 1;
  bool include_performance_analysis = 2;
  bool include_schema_context = 3;
  ExplainLevel explain_level = 4;
}

// Explain levels
enum ExplainLevel {
  SIMPLE = 0;
  DETAILED = 1;
  TECHNICAL = 2;
  BEGINNER = 3;
}

// Response with SQL explanation
message ExplainSqlResponse {
  string explanation = 1;
  ExecutionPlan execution_plan = 2;
  PerformanceAnalysis performance_analysis = 3;
  repeated string warnings = 4;
  repeated string suggestions = 5;
}

// Execution plan
message ExecutionPlan {
  string plan_text = 1;
  repeated PlanStep steps = 2;
  float estimated_cost = 3;
  int32 estimated_rows = 4;
}

// Plan step
message PlanStep {
  string operation = 1;
  string description = 2;
  float cost = 3;
  int32 rows = 4;
  int32 width = 5;
  repeated PlanStep sub_steps = 6;
}

// Performance analysis
message PerformanceAnalysis {
  repeated PerformanceIssue issues = 1;
  repeated string optimization_suggestions = 2;
  repeated string index_suggestions = 3;
}

// Performance issue
message PerformanceIssue {
  string issue_type = 1;
  string description = 2;
  string impact = 3;
  string recommendation = 4;
}

// Request to validate SQL query
message ValidateSqlRequest {
  string sql_query = 1;
  string database_id = 2;
  string user_id = 3;
  ValidateOptions options = 4;
}

// Validate options
message ValidateOptions {
  bool check_syntax = 1;
  bool check_semantics = 2;
  bool check_permissions = 3;
  bool check_performance = 4;
}

// Response with validation results
message ValidateSqlResponse {
  bool is_valid = 1;
  repeated ValidationIssue issues = 2;
  repeated string suggestions = 3;
}

// Validation issue
message ValidationIssue {
  IssueType issue_type = 1;
  string message = 2;
  string location = 3;
  string code = 4;
  string suggestion = 5;
}

// Issue types
enum IssueType {
  SYNTAX_ERROR = 0;
  SEMANTIC_ERROR = 1;
  PERMISSION_ERROR = 2;
  PERFORMANCE_WARNING = 3;
  SECURITY_WARNING = 4;
}

// Request for query suggestions
message QuerySuggestionsRequest {
  string partial_query = 1;
  string database_id = 2;
  string user_id = 3;
  string context = 4;
  int32 max_suggestions = 5;
}

// Response with query suggestions
message QuerySuggestionsResponse {
  repeated QuerySuggestion suggestions = 1;
}

// Query suggestion
message QuerySuggestion {
  string suggestion = 1;
  string description = 2;
  SuggestionType type = 3;
  float relevance_score = 4;
}

// Suggestion types
enum SuggestionType {
  KEYWORD = 0;
  TABLE = 1;
  COLUMN = 2;
  FUNCTION = 3;
  COMPLETE_QUERY = 4;
}

// Request to stream query execution
message StreamQueryRequest {
  string sql_query = 1;
  string database_id = 2;
  string user_id = 3;
  StreamOptions options = 4;
}

// Stream options
message StreamOptions {
  int32 batch_size = 1;
  int32 timeout_seconds = 2;
  bool include_metadata = 3;
  bool include_execution_plan = 4;
}

// Query result event
message QueryResultEvent {
  EventType event_type = 1;
  ResultBatch result_batch = 2;
  QueryMetadata metadata = 3;
  string error_message = 4;
  ExecutionPlan execution_plan = 5;
}

// Event types
enum EventType {
  START = 0;
  DATA = 1;
  METADATA = 2;
  ERROR = 3;
  COMPLETE = 4;
}

// Result batch
message ResultBatch {
  repeated ColumnInfo columns = 1;
  repeated Row rows = 2;
  int32 batch_index = 3;
  bool has_more = 4;
}

// Column information
message ColumnInfo {
  string name = 1;
  string data_type = 2;
  string table = 3;
  bool nullable = 4;
}

// Row of data
message Row {
  repeated Value values = 1;
}

// Value
message Value {
  oneof value {
    string string_value = 1;
    int64 int_value = 2;
    double double_value = 3;
    bool bool_value = 4;
    bytes bytes_value = 5;
    int64 timestamp_value = 6;
    string json_value = 7;
    NullValue null_value = 8;
  }
}

// Null value
enum NullValue {
  NULL_VALUE = 0;
}

// Query metadata
message QueryMetadata {
  int64 execution_time_ms = 1;
  int32 total_rows = 2;
  int32 affected_rows = 3;
  string query_type = 4;
  repeated string tables_accessed = 5;
}

// Request for schema information
message SchemaInfoRequest {
  string database_id = 1;
  string schema_name = 2;
  string table_name = 3;
  bool include_relationships = 4;
  bool include_indexes = 5;
  bool include_sample_data = 6;
}

// Response with schema information
message SchemaInfoResponse {
  repeated TableInfo tables = 1;
  repeated RelationshipInfo relationships = 2;
}

// Table information
message TableInfo {
  string name = 1;
  string schema = 2;
  string description = 3;
  int32 row_count_estimate = 4;
  int64 size_bytes = 5;
  repeated ColumnInfo columns = 6;
  repeated IndexInfo indexes = 7;
  repeated Row sample_data = 8;
}

// Index information
message IndexInfo {
  string name = 1;
  string type = 2;
  repeated string columns = 3;
  bool is_unique = 4;
  bool is_primary = 5;
  string definition = 6;
}

// Relationship information
message RelationshipInfo {
  string name = 1;
  string source_table = 2;
  string target_table = 3;
  repeated ColumnMapping column_mappings = 4;
  RelationshipType type = 5;
}

// Column mapping
message ColumnMapping {
  string source_column = 1;
  string target_column = 2;
}

// Relationship types
enum RelationshipType {
  ONE_TO_ONE = 0;
  ONE_TO_MANY = 1;
  MANY_TO_ONE = 2;
  MANY_TO_MANY = 3;
}

// Health check request
message HealthCheckRequest {
  // Empty
}

// Health check response
message HealthCheckResponse {
  Status status = 1;
  string version = 2;
  map<string, string> details = 3;
  
  enum Status {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
}

